Fix overflow

--- a/CSS/Stil_pagina.css
+++ b/CSS/Stil_pagina.css
@@ -1,3 +1,13 @@
+.pachet{
+    position: relative;
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-size: 500px 650px;
+    overflow-x: hidden;
+    -ms-overflow-x: hidden;
+}
+
 .colorare_text {                       /* folosit pentru texul scris in pagina */
   margin-left: 50px;
   margin-right:50px;
